# android_test_app

./: .gitignore  build.gradle  settings.gradle
.trae/documents/: 在生成数据时预计算文本宽高并写入模型.md  重构 BaseTgMessageCell（对齐 Telegram 设计）.md
Lib/: build.gradle
Lib/src/main/res/layout/: layout_base_container.xml
app/: build.gradle
app/schemas/com.alex.studydemo.module_room.AppDataBase/: 1.json
app/schemas/com.alex.studydemo.module_room.IMAppDataBase/: 1.json
app/schemas/com.alex.studydemo.module_room.UnifiedAppDataBase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  dng_jni.cpp  jpeg_jni.cpp  png_jni.cpp  webp_jni.cpp
app/src/main/jniLibs/: README.md
app/src/main/res/anim/: item_up_squeeze.xml
app/src/main/res/drawable/: bg_chatdetail.xml  bg_conversation_decoration.xml  bubble_bg.xml  fade_bottom_mask.xml  tg_bubble_outgoing.xml
app/src/main/res/layout/: activity_advanced_function.xml  activity_anim_list.xml  activity_arouter_main.xml  activity_arouter_second.xml  activity_base_data_base.xml  activity_channel.xml  activity_chat_lite.xml  activity_coroutine_demo.xml  activity_customer_view.xml  activity_dng_process.xml  activity_fast_thumbnail.xml  activity_flow.xml  activity_full_text.xml  activity_hilt_main.xml  activity_image_picker.xml  activity_jank_stats.xml  activity_jpg_convert.xml  activity_main.xml  activity_media_entry.xml  activity_message_list_lac.xml  activity_network_entry.xml  activity_network_monitor.xml  activity_network_request.xml  activity_offline_stt.xml  activity_performance_entry.xml  activity_png_alpha_check.xml  activity_png_convert.xml  activity_recycler_view.xml  activity_recycler_view_animation.xml  activity_room.xml  activity_speech_recognizer_stt.xml  activity_tg_text_chat.xml  activity_thread_entry.xml  activity_two_stage_header.xml  activity_webp_convert.xml  activity_webp_libwebp.xml  item_chat_message_lite.xml  item_main_entry.xml  item_message.xml  item_rv_animation.xml  (+5 more)
app/src/main/res/menu/: menu_animation.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml  scene_two_stage_header.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: build-libraw-android.sh
tg/: build.gradle
tg/src/main/: AndroidManifest.xml
tg/src/main/res/drawable/: tg_avatar_circle.xml  (+4 more)
(+169 files in other folders)
